# banya_rest_LLM_v1

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  urls.py
banya/: apps.py  model_ksm.py  model_tn.py  model_yj.py  view_dk.py  view_ksm.py  view_tn.py  view_yj.py  views.py
banya/migrations/: 0001_initial.py
banya_LLM/: .gitignore  apps.py  urls.py  views.py
banya_LLM/chatbot_app/: api_chat_generate.py  api_chat_kid_for_NIM_img.py  api_chat_kid_for_NIM_llama.py  api_micemate_chat_for_NIM_llama.py  test.ipynb
banya_LLM/chatbot_app/json/: dev.ipynb
banya_rest/: asgi.py  settings.py  urls.py  wsgi.py
banya_utils/: crypto.py  file_upload.py
chatbot_app/: api_chat_generate.py  api_chat_kid_for_NIM_img.py  api_chat_kid_for_NIM_llama.py  api_micemate_chat_for_NIM_llama.py  test.py
chatbot_app/json/: MICE_mate_knowledge_base.json
